--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,6 +31,14 @@
 <a href="/oauth2/authorization/google" class="login-btn">
     구글 계정으로 로그인
 </a>
+<h1>네이버 소셜 로그인</h1>
+<a href="/oauth2/authorization/naver" class="login-btn">
+    네이버 계정으로 로그인
+</a>
+<h1>카카오 소셜 로그인</h1>
+<a href="/oauth2/authorization/kakao" class="login-btn">
+    카카오 계정으로 로그인
+</a>
 
 </body>
 </html>
