feat: 마이페이지 카테고리 기능 추가  - 마이페이지 카테고리 정보 추가  - 마이페이지 카테고리 css 추가  - 마이페이지 상세보기 뒤로가기 버튼 추가  - 마이페이지 상세보기 카테고리 정보 추가  - 마이페이지 상세보기 게시글 공유/이동 버튼 위치 조정  - 마이페이지 상세보기 카테고리 css 추가

--- a/src/main/resources/templates/layout/mypage/mypage.html
+++ b/src/main/resources/templates/layout/mypage/mypage.html
@@ -19,11 +19,17 @@
             <h5><a th:href="@{/mypage/scrap/{id}(id=${item.scrapId})}"
                    th:text="${item.title}"></a>
             </h5>
+            <div class="post-category">
+                카테고리: <span
+                th:each="categoryName : ${articlesCategory[item.scrapId]}"
+                th:text="${categoryName} + ' '"></span>
+            </div>
             <div class="post-topic">
                 핵심 요약: <span th:text="${item.topic}"></span>
             </div>
             <div class="post-date">
-                스크랩 날짜: <span th:text="${#temporals.format(item.scrapDate, 'yyyy-MM-dd HH:mm')}"></span>
+                스크랩 날짜: <span
+                th:text="${#temporals.format(item.scrapDate, 'yyyy-MM-dd HH:mm')}"></span>
             </div>
         </div>
     </div>
