refactor: 병합한 User 및 로그인 기능에 따른 기존 코드 업데이트.

--- a/src/main/resources/templates/layout/mypage/detail.html
+++ b/src/main/resources/templates/layout/mypage/detail.html
@@ -78,5 +78,7 @@
         </th:block>
     </div>
 </div>
+<script src="/js/axios.min.js"></script>
+<script src="/js/apiClient.js"></script>
 </body>
 </html>
