--- a/src/main/resources/templates/layout/mypage/mypage.html
+++ b/src/main/resources/templates/layout/mypage/mypage.html
@@ -88,5 +88,7 @@
         </ul>
     </div>
 </div>
+<script src="/js/axios.min.js"></script>
+<script src="/js/apiClient.js"></script>
 </body>
 </html>
