chore: body, search 분리 및 분리에 따른 코드 업데이트. - detail, mypage body 및 search 파일 분리 - detail, mypage css 및 html 파일 수정 - detail 게시글 이동 경로 수정. - mypage comment 페이지 div에서 nav로 변경.

--- a/src/main/resources/templates/layout/mypage/detail.html
+++ b/src/main/resources/templates/layout/mypage/detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>상세 보기</title>
     <link href="/css/mypage/detail.css" rel="stylesheet">
+    <link href="/css/fregment/body.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -19,7 +20,7 @@
 
         <a class="move-button"
            th:if="${scrappedArticle.isShared()}"
-           th:href="@{'#' + ${scrappedArticle.scrapId}}"> <!--여기는 나중에 URL 확정되면 그때 수정하는 걸로-->
+           th:href="@{'/post/' + ${scrappedArticle.postId}}">
             게시글 이동
         </a>
 
