--- a/src/main/resources/templates/layout/mypage/mypage.html
+++ b/src/main/resources/templates/layout/mypage/mypage.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>마이 페이지</title>
     <link href="/css/mypage/mypage.css" rel="stylesheet">
+    <link href="/css/fregment/body.css" rel="stylesheet">
+    <link href="/css/fregment/search.css" rel="stylesheet">
 </head>
 <body>
 <form th:action="@{/mypage}" method="get" class="search-form">
@@ -72,7 +74,7 @@
             <div><strong>작성일:</strong> <span th:text="${#temporals.format(c.createTime, 'yyyy-MM-dd HH:mm')}"></span></div>
         </div>
     </div>
-    <div th:if="${totalPages > 1}">
+    <nav th:if="${totalPages > 1}">
         <ul class="pagination">
             <li class="page-item" th:if="${hasPrevBlock}">
                 <a class="page-link" th:href="@{/mypage(scrapPage=${startPage - 1})}">«</a>
@@ -86,7 +88,7 @@
                 <a class="page-link" th:href="@{/mypage(scrapPage=${endPage + 1})}">»</a>
             </li>
         </ul>
-    </div>
+    </nav>
 </div>
 <script src="/js/axios.min.js"></script>
 <script src="/js/apiClient.js"></script>
