feat: 댓글 작성한 기사의 제목 클릭 시 해당 기사로 이동할 수 있도록 코드 추가. - CommentResponseDto에 postId 추가. - html에서 경로 수정 및 postId에 접근할 수 있도록 수정. - CommentService에서 리턴값으로 postId 추가.

--- a/src/main/resources/templates/layout/mypage/mypage.html
+++ b/src/main/resources/templates/layout/mypage/mypage.html
@@ -8,6 +8,8 @@
     <link href="/css/fregment/search.css" rel="stylesheet">
 </head>
 <body>
+<div th:replace="layout/header/header :: headerFragment"></div>
+
 <form th:action="@{/mypage}" method="get" class="search-form">
     <input type="hidden" name="tab" th:value="${tab}"/>
     <input name="keyword" type="text" placeholder="제목으로 검색"
@@ -69,7 +71,7 @@
     <h3 class="section-title">작성한 댓글</h3>
     <div th:each="c : ${comments}">
         <div class="comment-item">
-            <div><strong>게시글:</strong> <a th:href="@{/mypage/scrap/{id}(id=${c.scrapId})}" th:text="${c.articleTitle}"></a></div>
+            <div><strong>게시글:</strong> <a th:href="@{/post/{id}(id=${c.postId})}" th:text="${c.articleTitle}"></a></div>
             <div><strong>작성한 댓글:</strong> <span th:text="${c.content}"></span></div>
             <div><strong>작성일:</strong> <span th:text="${#temporals.format(c.createTime, 'yyyy-MM-dd HH:mm')}"></span></div>
         </div>
