chore: content-comment-mypage-merge와 병합 후 코드 업데이트

--- a/src/main/resources/templates/layout/mypage/detail.html
+++ b/src/main/resources/templates/layout/mypage/detail.html
@@ -22,7 +22,7 @@
 
         <a class="move-button"
            th:if="${scrappedArticle.isShared()}"
-           th:href="@{'/post/' + ${scrappedArticle.postId}}">
+           th:href="@{'/posts/' + ${scrappedArticle.postId}}">
             게시글 이동
         </a>
 
