feat: 스크랩하기 버튼 추가 및 로그인 확인 기능 추가

--- a/src/main/resources/templates/postDetail.html
+++ b/src/main/resources/templates/postDetail.html
@@ -38,7 +38,7 @@
     <div class="info">
         <strong>스크랩한 날짜:</strong>
         <span th:text="${#temporals.format(scrappedArticle.scrapDate, 'yyyy-MM-dd HH:mm')}"></span>
-        <a th:href="@{/mypage}" class="back-button">뒤로가기</a>
+        <a th:href="@{/post}" class="back-button">뒤로가기</a>
     </div>
 
     <div class="info">
