--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -25,7 +25,7 @@ body {
     font-weight: bold;
     font-size: 20px;
     margin-right: 30px;
-    background-color: lawngreen;
+    background-color: #73EB77;
     color: black;
     text-decoration: none;
     padding: 3px;
@@ -61,7 +61,7 @@ body {
 }
 
 .login-button {
-    background-color: lawngreen;
+    background-color: #73EB77;
     color: black;
     border: none;
     padding: 8px 16px;
