--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,16 +10,16 @@
     <!-- 내비게이션 바 -->
     <nav class="navbar">
         <div class="navbar-left">
-            <a href="/" class="navbar-logo">프로젝트 로고</a>
-            <a href="/news" class="navbar-button">뉴스 찾아보기</a>
-            <a href="/board" class="navbar-button">소통 게시판</a>
+            <div class="navbar-logo">투브리핑</div>
+            <a href="/home" class="navbar-button">뉴스 찾아보기</a>
+            <a href="/post" class="navbar-button">소통 게시판</a>
         </div>
         <div class="navbar-right">
             <div th:if="${#authentication.principal == 'anonymousUser'}">
                 <a href="/login" class="login-button">로그인</a>
             </div>
             <div th:if="${#authentication.principal != 'anonymousUser'}">
-                <span class="user-nickname" th:text="${nickname}">닉네임</span>
+                <a href="/mypage" class="user-nickname" th:text="${nickname}">닉네임</a>
                 <a href="/logout" class="login-button logout-button">로그아웃</a>
             </div>
         </div>
